--- a/GalleryApp/Base.lproj/Main.storyboard
+++ b/GalleryApp/Base.lproj/Main.storyboard
@@ -1,24 +1,180 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xSP-iI-KHF">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="1sG-Qp-qQK">
+            <objects>
+                <navigationController id="xSP-iI-KHF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9NR-ZJ-Njl">
+                        <rect key="frame" x="0.0" y="50" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="OnG-K8-Pft"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R49-zy-5LN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-760" y="-2"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="GalleryApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8cJ-f7-O2D">
+                                <rect key="frame" x="0.0" y="94" width="375" height="684"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dataCell" rowHeight="120" id="6rh-mw-VXV" customClass="CustomTableViewCell" customModule="GalleryApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6rh-mw-VXV" id="jDq-ZP-9F1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NVz-OB-cJ7">
+                                                    <rect key="frame" x="30" y="21" width="100" height="78"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="Umj-M2-4rm"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7RY-Fh-xS8">
+                                                    <rect key="frame" x="140" y="21" width="205" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQu-gF-mzQ">
+                                                    <rect key="frame" x="140" y="78" width="205" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wQu-gF-mzQ" firstAttribute="bottom" secondItem="NVz-OB-cJ7" secondAttribute="bottom" id="1qi-xN-aAo"/>
+                                                <constraint firstItem="7RY-Fh-xS8" firstAttribute="leading" secondItem="NVz-OB-cJ7" secondAttribute="trailing" constant="10" id="Aab-rX-KTq"/>
+                                                <constraint firstItem="wQu-gF-mzQ" firstAttribute="leading" secondItem="NVz-OB-cJ7" secondAttribute="trailing" constant="10" id="HpC-Sh-vAG"/>
+                                                <constraint firstItem="7RY-Fh-xS8" firstAttribute="top" secondItem="NVz-OB-cJ7" secondAttribute="top" id="PXW-DY-8vG"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7RY-Fh-xS8" secondAttribute="trailing" constant="10" id="UdK-fc-yoF"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wQu-gF-mzQ" secondAttribute="trailing" constant="10" id="bLv-T8-Axf"/>
+                                                <constraint firstItem="NVz-OB-cJ7" firstAttribute="leading" secondItem="jDq-ZP-9F1" secondAttribute="leadingMargin" constant="10" id="c0O-OV-nbm"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="NVz-OB-cJ7" secondAttribute="bottom" constant="10" id="cVp-70-ll3"/>
+                                                <constraint firstItem="NVz-OB-cJ7" firstAttribute="top" secondItem="jDq-ZP-9F1" secondAttribute="topMargin" constant="10" id="wgV-wX-L1I"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="wQu-gF-mzQ" id="0ej-1b-lyw"/>
+                                            <outlet property="nameLabel" destination="7RY-Fh-xS8" id="tuN-hW-FHO"/>
+                                            <outlet property="productImageView" destination="NVz-OB-cJ7" id="VJB-zx-s0p"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="H23-5C-Hs2"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="8Pe-0L-fDM"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8cJ-f7-O2D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="03Q-pv-t1h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8cJ-f7-O2D" secondAttribute="trailing" id="Mdc-Bk-imt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8cJ-f7-O2D" secondAttribute="bottom" id="e5m-Uz-cJn"/>
+                            <constraint firstItem="8cJ-f7-O2D" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zLD-z0-2AL"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dkM-dh-4Np"/>
+                    <connections>
+                        <outlet property="tableView" destination="8cJ-f7-O2D" id="oF0-oB-PA5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="112.21374045801527" y="-2.1126760563380285"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="xjU-sr-4oX">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="YrG-aL-Eh3" customClass="DetailViewController" customModule="GalleryApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kmo-6D-u1G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Otu-TE-kdv">
+                                <rect key="frame" x="0.0" y="50" width="375" height="230"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="230" id="xPN-Yx-7yR"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KRY-3S-xrx">
+                                <rect key="frame" x="10" y="300" width="355" height="77.333333333333314"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zP-Kj-hIl">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="45.666666666666664"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="F6g-Qy-9TE">
+                                        <rect key="frame" x="0.0" y="55.666666666666679" width="355" height="21.666666666666664"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mez-ny-JhK">
+                                                <rect key="frame" x="0.0" y="0.0" width="175" height="21.666666666666668"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3.9(120)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uiK-bf-Z3r">
+                                                <rect key="frame" x="180" y="0.0" width="175" height="21.666666666666668"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Q3j-uO-FXN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Q3j-uO-FXN" firstAttribute="trailing" secondItem="Otu-TE-kdv" secondAttribute="trailing" id="N9z-gZ-71l"/>
+                            <constraint firstItem="KRY-3S-xrx" firstAttribute="top" secondItem="Otu-TE-kdv" secondAttribute="bottom" constant="20" id="UFR-FP-Hjd"/>
+                            <constraint firstItem="Q3j-uO-FXN" firstAttribute="trailing" secondItem="KRY-3S-xrx" secondAttribute="trailing" constant="10" id="Ui4-Da-mlC"/>
+                            <constraint firstItem="Otu-TE-kdv" firstAttribute="leading" secondItem="Q3j-uO-FXN" secondAttribute="leading" id="YXW-S2-ZH2"/>
+                            <constraint firstItem="Otu-TE-kdv" firstAttribute="top" secondItem="Q3j-uO-FXN" secondAttribute="top" id="fh9-vf-2BL"/>
+                            <constraint firstItem="KRY-3S-xrx" firstAttribute="leading" secondItem="Q3j-uO-FXN" secondAttribute="leading" constant="10" id="hdV-vR-Egl"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Hxe-tp-8S1"/>
+                    <connections>
+                        <outlet property="priceLabel" destination="Mez-ny-JhK" id="z88-hu-4Jz"/>
+                        <outlet property="productImageView" destination="Otu-TE-kdv" id="Z5i-av-6qc"/>
+                        <outlet property="ratingLabel" destination="uiK-bf-Z3r" id="KgB-kF-Ube"/>
+                        <outlet property="titleLabel" destination="0zP-Kj-hIl" id="OIZ-XQ-Ndi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sRh-Vb-1ta" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1136.8" y="-2.2167487684729066"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
